fix: one pixel gap when pressing send

--- a/frontend/src/components/Scaffold/style.module.scss
+++ b/frontend/src/components/Scaffold/style.module.scss
@@ -27,3 +27,8 @@
 .empty-image {
 	filter: grayscale(100%) opacity(0.15);
 }
+
+.send-button {
+	border-radius: 0;
+	transform: none !important;
+}
